[package]
name = "kaja-web"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo = { version = "0.12.0", features = ["console"] }
wasm-bindgen = "0.2.122"

[dependencies.web-sys]
version = "0.3.91"
features = ["console", "Window", "Document", "HtmlDocument", "Element", "HtmlElement", "Node", "NodeList"]
