[package]
name = "kaja-web"
version = "1.0.0"
edition = "2024"
description = "Web framework for Rust targeting the WebAssembly"
license = "MIT"
repository = "https://github.com/johanmattssonm/kaja-web"
readme = "README.md"
keywords = ["html", "web", "wasm", "webassembly", "frontend"]


[dependencies]
gloo = "0.12.0"
gloo-console = "0.4.0"
kaja-html-macro = "1.0.3"
wasm-bindgen = "0.2.122"
web-sys = { version = "0.3.99", features = ["Document", "HtmlDocument", "Element", "HtmlElement", "HtmlInputElement", "NodeList"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
inventory = "0.3.24"
js-sys = "0.3"
wasm-bindgen-futures = "0.4.72"
kaja-callback-macro = "0.1.0"
