[package]
name = "kaja-web-callback-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.122"
kaja-web = { path = "../.." }
js-sys = "0.3"
web-sys = { version = "0.3.99", features = ["Element", "HtmlElement", "NodeList", "CssStyleDeclaration", "KeyboardEvent"] }
gloo = "0.12"
kaja-html-macro = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# Ensure uuid has a wasm-compatible RNG source (uses Web Crypto via `js` feature)
uuid = { version = "1.23.2", features = ["js", "v4"] }
console_error_panic_hook = "0.1.7"
kaja-callback-macro = { version = "0.1.0", path = "../../../kaja-callback-macro" }
inventory = "0.3.24"
serde-wasm-bindgen = "0.5"
wasm-bindgen-futures = "0.4.72"
