[package]
name = "kaja-web-click-counter-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.122"
kaja-web = { path = "../.." }
js-sys = "0.3"
web-sys = { version = "0.3.99", features = ["Element", "HtmlElement", "NodeList"] }
gloo = "0.12"
kaja-html-macro = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.2", features = ["js", "v4"] }
console_error_panic_hook = "0.1.7"
inventory = "0.3.24"
serde-wasm-bindgen = "0.5"
kaja-callback-macro = "0.1.0"
